# sl-palette-generator

./: .prettierrc  README.md  angular.json  package-lock.json  package.json
src/: index.html  styles.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: extract_palette.rs  mod.rs
src/app/: app.ts
src/app/components/app-info-dialog/: app-info-dialog.component.ts
src/app/components/image-viewer/: image-viewer.component.ts
src/app/components/info-panel/: color-palette-tab.component.ts  info-panel.component.ts  metadata-tab.component.ts
src/app/components/toolbar/: toolbar.component.ts
src/app/functions/: extract-metadata.function.ts
src/app/services/: color-palette.service.ts  image-select.service.ts
